[feat] update 트랜잭션 readOnly 버그 개선 + 서비스 주석 수정 + Category 기본 생성자 차단(test 객체 생성 함수로 대체)
[feat] update 트랜잭션 readOnly 버그 개선
+ 서비스 주석 수정
+ Category 기본 생성자 차단(test 객체 생성 함수로 대체)